<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.shiftTutorial.activation.ActivationViewModel" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ActivationFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activation.ActivationFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/LockIcon"
                    android:src="@drawable/ic_lock"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ActivationUserID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:hint="@string/user_id"
                        android:inputType="text"
                        android:text="@={viewModel.userId}"
                        tools:ignore="MissingConstraints" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ActivationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_security"
                        android:drawablePadding="8dp"
                        android:hint="@string/activation_code"
                        android:inputType="number"
                        android:text="@={viewModel.activationCode}"
                        tools:ignore="MissingConstraints" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ActivationPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@{viewModel.password}"
                        tools:ignore="MissingConstraints" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ActivationConfirmationPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="8dp"
                        android:hint="@string/password_confirmation"
                        android:inputType="textPassword"
                        android:text="@{viewModel.confirmPassword}"
                        tools:ignore="MissingConstraints" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/ActivationButton"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:onClick="@{viewModel::onActivationButtonClick}"
                    android:text="@string/activate"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/ActivatedButton"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="180dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:onClick="@{viewModel::onAlreadyActivatedButtonClick}"
                    android:text="@string/already_activated"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>
